--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "ai-batch"
-version = "0.2.0"
+version = "0.2.1"
 description = "Batch processing for Anthropic's Claude API with structured output"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -23,6 +23,7 @@ classifiers = [
 ]
 dependencies = [
     "anthropic>=0.57.1",
+    "build>=1.2.2.post1",
     "python-dotenv>=1.1.1",
     "tokencost>=0.1.24",
 ]
