--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "ai-batch"
 version = "0.2.1"
-description = "Batch processing for Anthropic's Claude API with structured output"
+description = "ai-batch is now batchata"
 readme = "README.md"
 requires-python = ">=3.12"
 license = {text = "MIT"}
@@ -22,10 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "anthropic>=0.57.1",
-    "build>=1.2.2.post1",
-    "python-dotenv>=1.1.1",
-    "tokencost>=0.1.24",
+    "batchata",
 ]
 
 [project.scripts]
